WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
79725
<a ping> doesn't work in WebKit2
https://bugs.webkit.org/show_bug.cgi?id=79725
Summary
<a ping> doesn't work in WebKit2
Brady Eidson
Reported
2012-02-27 17:44:40 PST
<a ping> can't be enabled in WK2
http://trac.webkit.org/changeset/73312
attempted to enable it but missed pushing the bit into WebCore::Settings in the WebProcess. A few more layout tests can be enabled now, too. In radar as <
rdar://problem/10924993
>
Attachments
Patch v1
(3.46 KB, patch)
2012-02-27 17:46 PST
,
Brady Eidson
ap
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Brady Eidson
Comment 1
2012-02-27 17:46:40 PST
Created
attachment 129150
[details]
Patch v1
Brady Eidson
Comment 2
2012-02-27 17:59:42 PST
http://trac.webkit.org/changeset/109055
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug