<rdar://problem/10924993> and https://bugs.webkit.org/show_bug.cgi?id=79725 <a ping> doesn't work in WebKit2

Reviewed by Alexey Proskuryakov.

Source/WebKit2:

* WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::updatePreferences): Push the WK2 <a ping> setting to WebCore::Settings.

LayoutTests:

* platform/wk2/Skipped: Unskip some tests that now pass.

Canonical link: https://commits.webkit.org/96817@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@109055 268f45cc-cd09-0410-ab3c-d52691b4dbfc